// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

import "common.proto";
import "google/api/annotations.proto";
import "scene_intelligence_result_model.gen.proto";

service SceneIntelligenceResultService {
    //创建
    rpc Create(SceneIntelligenceResult) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/create"
			body:"*"
		};
	}
    //匹配多条件删除
	rpc Delete(SceneIntelligenceResult) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/delete"
			body:"*"
		};
	}
    //匹配主键删除,一般是Id
	rpc DeleteById(SceneIntelligenceResult) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/deleteById"
			body:"*"
		};
	}
    //匹配主键批量删除
    rpc DeleteByIds(SceneIntelligenceResultBatchDeleteRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResult/DeleteByIds"
            body:"*"
        };
    }
    //根据主键更新非空字段
	rpc Update(SceneIntelligenceResult) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/update"
			body:"*"
		};
	}
    //根据主键更新所有字段
    rpc UpdateAll(SceneIntelligenceResult) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResult/updateAll"
            body:"*"
        };
    }
    //根据主键更新指定列
    rpc UpdateFields(SceneIntelligenceResultUpdateFieldsRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResult/updateFields"
            body:"*"
        };
    }
    //根据主键查找,一般是Id,返回单条数据
	rpc FindById(SceneIntelligenceResultFilter) returns (SceneIntelligenceResultResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/findById"
			body:"*"
		};
	}
    //多条件查找，返回单条数据
    rpc Find(SceneIntelligenceResultFilter) returns (SceneIntelligenceResultResponse) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResult/find"
            body:"*"
        };
    }
    //查找，支持分页，可返回多条数据
	rpc Lists(SceneIntelligenceResultListRequest) returns (SceneIntelligenceResultResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResult/lists"
			body:"*"
		};
	}
}
