// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

import "common.proto";
import "google/api/annotations.proto";
import "scene_intelligence_result_task_model.gen.proto";

service SceneIntelligenceResultTaskService {
    //创建
    rpc Create(SceneIntelligenceResultTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/create"
			body:"*"
		};
	}
    //匹配多条件删除
	rpc Delete(SceneIntelligenceResultTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/delete"
			body:"*"
		};
	}
    //匹配主键删除,一般是Id
	rpc DeleteById(SceneIntelligenceResultTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/deleteById"
			body:"*"
		};
	}
    //匹配主键批量删除
    rpc DeleteByIds(SceneIntelligenceResultTaskBatchDeleteRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResultTask/DeleteByIds"
            body:"*"
        };
    }
    //根据主键更新非空字段
	rpc Update(SceneIntelligenceResultTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/update"
			body:"*"
		};
	}
    //根据主键更新所有字段
    rpc UpdateAll(SceneIntelligenceResultTask) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResultTask/updateAll"
            body:"*"
        };
    }
    //根据主键更新指定列
    rpc UpdateFields(SceneIntelligenceResultTaskUpdateFieldsRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResultTask/updateFields"
            body:"*"
        };
    }
    //根据主键查找,一般是Id,返回单条数据
	rpc FindById(SceneIntelligenceResultTaskFilter) returns (SceneIntelligenceResultTaskResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/findById"
			body:"*"
		};
	}
    //多条件查找，返回单条数据
    rpc Find(SceneIntelligenceResultTaskFilter) returns (SceneIntelligenceResultTaskResponse) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceResultTask/find"
            body:"*"
        };
    }
    //查找，支持分页，可返回多条数据
	rpc Lists(SceneIntelligenceResultTaskListRequest) returns (SceneIntelligenceResultTaskResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceResultTask/lists"
			body:"*"
		};
	}
}
