// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

import "common.proto";
import "google/api/annotations.proto";
import "scene_intelligence_task_model.gen.proto";

service SceneIntelligenceTaskService {
    //创建
    rpc Create(SceneIntelligenceTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/create"
			body:"*"
		};
	}
    //匹配多条件删除
	rpc Delete(SceneIntelligenceTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/delete"
			body:"*"
		};
	}
    //匹配主键删除,一般是Id
	rpc DeleteById(SceneIntelligenceTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/deleteById"
			body:"*"
		};
	}
    //匹配主键批量删除
    rpc DeleteByIds(SceneIntelligenceTaskBatchDeleteRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceTask/DeleteByIds"
            body:"*"
        };
    }
    //根据主键更新非空字段
	rpc Update(SceneIntelligenceTask) returns (Response) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/update"
			body:"*"
		};
	}
    //根据主键更新所有字段
    rpc UpdateAll(SceneIntelligenceTask) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceTask/updateAll"
            body:"*"
        };
    }
    //根据主键更新指定列
    rpc UpdateFields(SceneIntelligenceTaskUpdateFieldsRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceTask/updateFields"
            body:"*"
        };
    }
    //根据主键查找,一般是Id,返回单条数据
	rpc FindById(SceneIntelligenceTaskFilter) returns (SceneIntelligenceTaskResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/findById"
			body:"*"
		};
	}
    //多条件查找，返回单条数据
    rpc Find(SceneIntelligenceTaskFilter) returns (SceneIntelligenceTaskResponse) {
        option (google.api.http) = {
            post:"/v1/sceneIntelligenceTask/find"
            body:"*"
        };
    }
    //查找，支持分页，可返回多条数据
	rpc Lists(SceneIntelligenceTaskListRequest) returns (SceneIntelligenceTaskResponse) {
		option (google.api.http) = {
			post:"/v1/sceneIntelligenceTask/lists"
			body:"*"
		};
	}
}
