// Code generated by protoc,2022-08-16 10:18:03. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

import "common.proto";
import "google/api/annotations.proto";
import "iot_device_group_list_model.gen.proto";

service IotDeviceGroupListService {
    //创建
    rpc Create(IotDeviceGroupList) returns (Response) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/create"
			body:"*"
		};
	}
    //匹配多条件删除
	rpc Delete(IotDeviceGroupList) returns (Response) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/delete"
			body:"*"
		};
	}
    //匹配主键删除,一般是Id
	rpc DeleteById(IotDeviceGroupList) returns (Response) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/deleteById"
			body:"*"
		};
	}
    //匹配主键批量删除
    rpc DeleteByIds(IotDeviceGroupListBatchDeleteRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/iotDeviceGroupList/DeleteByIds"
            body:"*"
        };
    }
    //根据主键更新非空字段
	rpc Update(IotDeviceGroupList) returns (Response) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/update"
			body:"*"
		};
	}
    //根据主键更新所有字段
    rpc UpdateAll(IotDeviceGroupList) returns (Response) {
        option (google.api.http) = {
            post:"/v1/iotDeviceGroupList/updateAll"
            body:"*"
        };
    }
    //根据主键更新指定列
    rpc UpdateFields(IotDeviceGroupListUpdateFieldsRequest) returns (Response) {
        option (google.api.http) = {
            post:"/v1/iotDeviceGroupList/updateFields"
            body:"*"
        };
    }
    //根据主键查找,一般是Id,返回单条数据
	rpc FindById(IotDeviceGroupListFilter) returns (IotDeviceGroupListResponse) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/findById"
			body:"*"
		};
	}
    //多条件查找，返回单条数据
    rpc Find(IotDeviceGroupListFilter) returns (IotDeviceGroupListResponse) {
        option (google.api.http) = {
            post:"/v1/iotDeviceGroupList/find"
            body:"*"
        };
    }
    //查找，支持分页，可返回多条数据
	rpc Lists(IotDeviceGroupListListRequest) returns (IotDeviceGroupListResponse) {
		option (google.api.http) = {
			post:"/v1/iotDeviceGroupList/lists"
			body:"*"
		};
	}
}
